<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_bike"
        android:icon="@drawable/ic_directions_bike_black_24dp"
        android:title="@string/ride"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_delete_group_1"
                    android:checkable="true"
                    android:title="@string/group1"/>
                <item
                    android:id="@+id/item_delete_group_2"
                    android:checkable="true"
                    android:title="@string/group2"/>
                <item
                    android:id="@+id/item_delete_group_3"
                    android:checkable="true"
                    android:title="@string/group3"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/item_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/more"
        app:showAsAction="never">
        <menu>
            <!--android:icon="@drawable/ic_radio_black_24dp"-->
            <item
                android:id="@+id/item_radio"
                android:title="@string/radio"
                app:showAsAction="always"/>
            <item
                android:id="@+id/item_music"
                android:title="@string/music"
                app:showAsAction="never"/>
            <!--android:icon="@drawable/ic_music_note_black_24dp"-->
        </menu>
    </item>


</menu>